--- a/src/main.html
+++ b/src/main.html
@@ -2,7 +2,7 @@
 <html>
  
     <head>
-        <title>Fun Editor</title>
+        <title>Nate</title>
         <script type="text/javascript" src="bower_components/zepto/zepto.min.js"></script>
         <script type="text/javascript" src="js/emmet.js"></script>
         <script type="text/javascript" src="js/ace-builds/src-min-noconflict/ace.js"></script>
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="js/ace-builds/src-min-noconflict/ext-language_tools.js"></script>
         <script type="text/javascript" src="js/ace-builds/src-min-noconflict/ext-spellcheck.js"></script>
         <script type="text/javascript" src="js/ace-builds/src-min-noconflict/keybinding-vim.js"></script>
-        <script type="text/javascript" src="js/FunEditor.js"></script>
+        <script type="text/javascript" src="js/Nate.js"></script>
         <link rel="stylesheet/less" type="text/css" href="less/default.less">
         <script type="text/javascript" src="bower_components/less/dist/less.min.js"></script>
     </head>
