fixed saveas err

--- a/src/main.html
+++ b/src/main.html
@@ -40,6 +40,7 @@
         </div>
  
         <input style="display:none;" id="openFile" type="file" />
-        <input style="display:none;" id="saveFile" type="file" />
+        <!-- <input style="display:none;" id="saveFile" type="file" /> -->
+        <input style="display:none;" id="saveFile" type="file" nwsaveas="Untitled" />
     </body>
 </html>
