--- a/src/ui/main.html
+++ b/src/ui/main.html
@@ -2,10 +2,9 @@
 <html> 
     <head>
         <title>Nate Editor</title>
-        <script type="text/javascript" src="js/nate.js"></script>
+        <script type="text/javascript" src="../js/nate.js"></script>
     </head>
  
     <body>
-        We are using node.js <script>document.write(process)</script>.
     </body>
 </html>
